# _bliss_c

./: .gitignore  CMakeLists.txt  README.md  bliss.h  bliss.pc.in  build_nix.sh  build_win.bat
_bak/: bliss_core_fixes.c  crash_analysis.md  critical_fixes.c  fixes_more.c  integration_helpers.c
benchmarks/: benchmark_comparison.c  benchmark_main.c
cmake/: blissConfig.cmake.in
data/ag/: ag2-17  ag2-19  ag2-23  ag2-25  ag2-27  ag2-29  ag2-31  ag2-32  ag2-37  ag2-41  ag2-43  ag2-47
include/: bliss.h
src/: bliss_core.c  bliss_io.c  bliss_partition.c  bliss_refinement.c  bliss_unified.c  orbit.c  partition_individualization.c
tests/: test_automorphisms.c  test_basic.c  test_bliss_complete.c  test_canonical.c  test_classic_graphs.c  test_classic_graphs_v0.c  test_graph_creation.c  test_io.c  test_lpfold.c  test_memory.c  test_performance.c  test_validation.c
tools/: bliss_main.c
